outputs/tsp_constructive-constructive/2025-09-21_00-59-09/evaluations/problem_eval-6809021737451581453_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of proximity to the current node, closeness to the destination, and centroid alignment based on the remaining path length, using a decay factor to prioritize immediate goals early in the search and balance long-term alignment later. The centroid is now computed as the weighted average of unvisited nodes' distances to the destination, with weights inversely proportional to their distances to the current node.}
                                                                                                                                                                                                                                                                                                                               ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of proximity to the current node, closeness to the destination, and centroid alignment based on the remaining path length, using a decay factor to prioritize immediate goals early in the search and balance long-term alignment later. The centroid is now computed as the weighted average of unvisited nodes' distances to the destination, with weights inversely proportional to their distances to the current node.}
                                                                                                                                                                                                                                                                                                                               ^
SyntaxError: unterminated string literal (detected at line 1)
